<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Assetno">Asset Number</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">D A Asset Register</string>
    <string name="comment">Others/Comments</string>
    <string name="el2cross14">Emergency Lights T5 2*14W</string>
    <string name="el2cross18">Emergency Lights T8 2*18W</string>
    <string name="el2cross28">Emergency Lights T5 2*28W</string>
    <string name="el2cross36">Emergency Lights T8 2*36W</string>
    <string name="end">END</string>
    <string name="exitblad">Exit Blade Type</string>
    <string name="exitbox">Exit Box Type</string>
    <string name="exitjumbo">Exit Jumbo</string>
    <string name="exitquick">Exit Quick Fit</string>
    <string name="exitswing">Exit SwingBlade Type</string>
    <string name="exitweather">Exit WeatherProof</string>
    <string name="home_export">EXPORT</string>
    <string name="home_new">NEW</string>
    <string name="home_save">SAVED</string>
    <string name="home_title">ASSET REGISTER</string>
    <string name="location">Location</string>
    <string name="new_register">NEW ASSET REGISTER</string>
    <string name="next">NEXT</string>
    <string name="offlineData">Offline Data</string>
    <string name="onlineData">Online Data</string>
    <string name="permission_necessary">Permission Necessary</string>
    <string name="propertylevel">Property Level</string>
    <string name="save_register">SAVED ASSET REGISTER</string>
    <string name="search_menu_title">Search</string>
    <string name="sitename">Site Name</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Storage Permission is necessary to wrote data</string>
    <string name="twin">TWIN/SPITFIRE</string>
    <string name="batten">Battens</string>
    <string name="emr">Emergency light</string>
    <string name="exitsign">Exit signs</string>
</resources>
