<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="22dp" android:textColor="#000" android:id="@+id/text1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="ID ="/>
    <TextView android:textSize="22dp" android:textColor="#000" android:id="@+id/textviewID" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="ID Show Here" android:layout_toRightOf="@+id/text1" android:layout_alignParentTop="true"/>
    <TextView android:textSize="20dp" android:textColor="#2196f3" android:id="@+id/textviewSubjectName" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="Subject Name Show Here" android:layout_below="@+id/textviewID"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="@dimen/fab_margin_16dp" android:layout_marginTop="@dimen/fab_margin_16dp" android:layout_marginRight="@dimen/fab_margin_16dp" android:layout_marginBottom="@dimen/fab_margin_16dp">
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="Id = "/>
            <TextView android:textColor="@color/black" android:id="@+id/onlineid" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="abc"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/sitename"/>
            <TextView android:textColor="@color/black" android:id="@+id/onlinesite" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="aaa"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="Date = "/>
            <TextView android:textColor="@color/black" android:id="@+id/onlineDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/twin"/>
            <TextView android:textColor="@color/black" android:id="@+id/twinasset" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/Assetno"/>
            <TextView android:textColor="@color/black" android:id="@+id/assetNumber" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/el2cross14"/>
            <TextView android:textColor="@color/black" android:id="@+id/edit2cross14" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/el2cross18"/>
            <TextView android:textColor="@color/black" android:id="@+id/edit2cross18" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/el2cross28"/>
            <TextView android:textColor="@color/black" android:id="@+id/edit2cross28" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/el2cross36"/>
            <TextView android:textColor="@color/black" android:id="@+id/edit2cross36" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitquick"/>
            <TextView android:textColor="@color/black" android:id="@+id/editQuick" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitbox"/>
            <TextView android:textColor="@color/black" android:id="@+id/editBox" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitblad"/>
            <TextView android:textColor="@color/black" android:id="@+id/editBlad" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitswing"/>
            <TextView android:textColor="@color/black" android:id="@+id/editSwing" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitweather"/>
            <TextView android:textColor="@color/black" android:id="@+id/editWeather" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/exitjumbo"/>
            <TextView android:textColor="@color/black" android:id="@+id/editJumbo" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/location"/>
            <TextView android:textColor="@color/black" android:id="@+id/editLocation" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/propertylevel"/>
            <TextView android:textColor="@color/black" android:id="@+id/editProperty" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textColor="@color/black" android:layout_width="@dimen/margin_120" android:layout_height="wrap_content" android:text="@string/comment"/>
            <TextView android:textColor="@color/black" android:id="@+id/editCmnt" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="1233"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
