<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView
            android:textSize="@dimen/margin_40"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/font_size_15sp"
            android:text="@string/home_title"
       />
        <Button
            android:textSize="@dimen/font_size_20sp"
            android:textColor="@color/white"
            android:id="@+id/home_new"
            android:background="@drawable/buttoneffect"
            android:layout_width="@dimen/margin_150"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_10"
            android:text="@string/home_new"/>
        <Button
            android:id="@+id/home_save"
            android:background="@drawable/buttoneffect"
            android:layout_width="@dimen/margin_150"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_10"
            android:text="@string/home_save"
            android:textSize="@dimen/font_size_20sp"
            android:textColor="@color/white"/>
        <Button android:textSize="@dimen/font_size_20sp" android:textColor="@color/white" android:id="@+id/home_export" android:background="@drawable/buttoneffect" android:layout_width="@dimen/margin_150" android:layout_height="wrap_content" android:layout_marginTop="@dimen/height_10" android:text="@string/home_export"/>
        <Button android:textSize="@dimen/font_size_20sp" android:textColor="@color/white" android:id="@+id/home_export1" android:background="@drawable/buttoneffect" android:visibility="gone" android:layout_width="@dimen/margin_150" android:layout_height="wrap_content" android:layout_marginTop="@dimen/height_10" android:text="@string/home_export"/>
    </LinearLayout>
</RelativeLayout>
